@startuml diagram

class Beneficiados {
    -id : int
    -nombre : str
    -apellido : str
    -edad : int
    -sexo : Sexo
    -nacionalidad : Nacionalidad
    -situacion_laboral : Situacion_Laboral
    -nro_hijos : int
    -ingresos : int
    -domicilio : Domilio
    -nivel_pobreza : Nivel_Pobreza
    -estado_salud : Estado_Salud
    -situacion_familiar : Situacion_Familiar
    -disponibilidad_recursos : Disponibilidad_Recursos
    --
    +get_...()
    +set_...()
}

class Nacionalidades {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Sexos {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Voluntarios {
    -id : int
    -nombre : str
    -apellido : str
    -rol : Rol
    --
    +get_...()
    +set_...()
}

class Donaciones {
    -id : int
    -fecha : date
    -donante : Donante
    -ingrediente : Ingrediente
    -cantidad : int
    --
    +get_...()
    +set_...()
}

class Comidas {
    -id : int
    -nombre : str    
    -descripcion : str
    -ingredientes : Ingredientes
    --
    +get_...()
    +set_...()
    +get_total_de_comidas_entregadas()
    +get_comidas_preparadas()
}

class Ingredientes {
    -id : int
    -nombre : str
    -menu : Menu
    -stock : int
    -tipo_ingrediente : Tipo_de_Ingrediente
    --
    +get_...()
    +set_...()
}

class Talleres {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Domicilios {
    -id : int
    -calle : str
    -numero : int
    --
    +get_...()
    +set_...()
}

class Situaciones_Laborales {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Niveles_Pobreza {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Estados_Salud {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Situaciones_Familiares {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Disponibilidades_Recursos {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Roles {
    -id : int
    -nombre : str
    -descripcion : str
    --
    +get_...()
    +set_...()
}

class Asistencias {
    -id : int
    -dia : date
    -beneficiado : Beneficiado
    --
    +get_...()
    +set_...()
}

class Donantes {
    -id : int
    -nombre : str
    -apellido : str
    --
    +get_...()
    +set_...()
}

class Tipos_de_Ingredientes {
    -id : int
    -nombre : str
    --
    +get_...()
    +set_...()
}


Voluntarios --> Roles
Beneficiados --> Situaciones_Laborales
Beneficiados --> Domicilios
Beneficiados --> Niveles_Pobreza
Beneficiados --> Estados_Salud
Beneficiados --> Situaciones_Familiares
Beneficiados --> Disponibilidades_Recursos
Beneficiados --> Comidas
Beneficiados --> Talleres
Beneficiados --> Sexos
Beneficiados --> Nacionalidades
Beneficiados --> Asistencias
Comidas --> Ingredientes
Comidas --> Voluntarios
Ingredientes --> Donaciones
Donaciones <-- Donantes 
Ingredientes --> Tipos_de_Ingredientes